Fix nested collapsed flex-grid row
Bug: columns in collapsed row doesn't have padding, but nested
collapsed flex-grid row still have negative margins.

Fix: apply the same path than in classic grids.

Note: Grids and flex-grids have a lot of bugs like this one and should
be refactorized. Please beat me if you see this commit 6 months later
and nothing changed.

--- a/scss/grid/_flex-grid.scss
+++ b/scss/grid/_flex-grid.scss
@@ -134,6 +134,11 @@
     // Nesting behavior
     & .row {
       @include flex-grid-row(nest, $base: false);
+
+      &.collapse {
+        margin-right: 0;
+        margin-left: 0;
+      }
     }
 
     // Expanded row
